<resources>
    <string name="app_name">TableTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="log_out_menu_item">Log out</string>
    <string name="action_settings"></string>
    <string name="title_activity_welcome"></string>
    <string name="title_activity_login_and_registration">LoginAndRegistration</string>
    <string name="welcome_message">Welcome</string>
    <string name="password">password here</string>
    <string name="username">username here</string>
    <string name="btnLoginTxt">Login</string>
    <string name="btnRegistrationText">Register here</string>
    <string name="firstName">first name here</string>
    <string name="lastName">last name here</string>
    <string name="title_activity_fragment_find_me_on_the_map">FragmentFindMeOnTheMap</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="data_entry">Entry data</string>
    <string name="data_display">Display data</string>
    <string name="title_activity_fragment_enter_data">FragmentEnterData</string>
    <string name="title_activity_fragment_display_data">FragmentDisplayData</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="txtEnterStudent">Enter Student</string>
    <string name="txtEnterStudentsInstrument">Enter Students Instrument</string>
    <string name="txtStudentId">Enter id: </string>
    <string name="txtStudentFirstName">Enter first name: </string>
    <string name="txtStudentLastName">Enter last name: </string>
    <string name="txtSelectCity">Select city: </string>
    <string name="editTextStudentId"></string>
    <string name="editTextStudentLastName"></string>
    <string name="editTextStudentFirstName"></string>
    <string name="txtBtn_cancel">Cancel</string>
    <string name="txtBtn_cancel_inst">Cancel</string>
    <string name="txtBtnSave">Save</string>
    <string name="txtSelectInstrument">Select student:</string>
    <string name="txtSelectStudent">Select Instrument:</string>
    <string name="instrument_number">Set quantity \nof instruments:</string>
    <string name="dateText">Insert date</string>
    <string name="txtBtnShowStudents">Show students</string>
    <string name="txtBtnShowInstruments">Show instruments</string>
    <string name="txtBtnShowStudentsWithInstruments">Show students \n with instruments</string>
    <string name="txtBtnShowCities">Show cities</string>
    <string name="title_activity_show_students_table_view"></string>
    <string name="title_activity_show_instruments_table_view"></string>
    <string name="title_activity_show_cities_table_view"></string>
    <string name="title_activity_show_students_with_insturments_table_view"></string>
    <string name="txtCityTableName">City Table</string>
    <string name="search_for_city"></string>
    <string name="delete_mode">Delete mode</string>
    <string name="stay_logged_in_text">stay logged in</string>


    <!--
        <array name="cityNameArray">
            <item>Beograd</item>
            <item>Mladenovac</item>
            <item>Novi Sad</item>
            <item>Kragujevac</item>
        </array>
    -->
</resources>
