<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="60dp"
    android:paddingBottom="35dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.futin.tabletest.userInterface.fragments.FragmentRegistration"
    android:background="@drawable/rob_img_new">

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#ffbbbbbb"
        android:layout_below="@+id/txtUsername"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="#ffbbbbbb"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/btnRegistrationText"
        android:textColor="#D9D9D7"
        android:textSize="20sp"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtLastName"
        android:layout_alignStart="@+id/txtLastName"
        android:layout_marginBottom="50dp"
        android:layout_alignRight="@+id/txtLastName"
        android:layout_alignEnd="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#ffbbbbbb"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/firstName" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:textColorHint="#ffbbbbbb"
        android:layout_below="@+id/txtFirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

</RelativeLayout>
