<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:id="@+id/instrumentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="25dp"
    android:layout_marginTop="55dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtSelectStudent"
        android:id="@+id/textView1"
        android:textSize="20sp"
        android:layout_alignTop="@+id/spinnerStudent"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/spinnerInstrument"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtSelectInstrument"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_above="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp" />


    <Spinner
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/spinnerStudent"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spinnerInstrument" />

    <Button
        android:id="@+id/btnCancelInst"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/button_shape_inside_layout"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/txtBtn_cancel"
        android:textColor="#D9D9D7"
        android:textSize="12sp"
        android:nestedScrollingEnabled="false"
        android:layout_marginBottom="125dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSaveInst"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/txtBtnSave"
        android:background="@drawable/button_shape_inside_layout"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#D9D9D7"
        android:textSize="12sp"
        android:nestedScrollingEnabled="false"
        android:layout_alignTop="@+id/btnCancelInst"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instrument_number"
        android:id="@+id/textView6"
        android:layout_above="@+id/btnCancelInst"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtNumberOfInstruments"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>