<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dirty_grey_img"
tools:context="com.example.futin.tabletest.userInterface.fragments.FragmentDisplayData"
    android:id="@+id/displayDataLayout">

    <Button
        android:id="@+id/btnShowStudents"
        android:text="@string/txtBtnShowStudents"
        android:layout_marginTop="97dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#D9D9D7"
        android:textSize="15sp"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnShowInstruments"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/txtBtnShowInstruments"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#D9D9D7"
        android:textSize="15sp"
        android:nestedScrollingEnabled="false"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnShowStudents"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/txtBtnShowStudentsWithInstruments"
        android:id="@+id/btnShowStudWithInst"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#D9D9D7"
        android:textSize="15sp"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/btnShowInstruments"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/txtBtnShowCities"
        android:id="@+id/btnShowCities"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnShowStudWithInst"
        android:layout_alignStart="@+id/btnShowStudWithInst"
        android:layout_alignEnd="@+id/btnShowStudWithInst"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#D9D9D7"
        android:textSize="15sp"
        android:nestedScrollingEnabled="false"
        android:layout_centerVertical="true"
        />
</RelativeLayout>
